# Marine_Nerf

./: pyproject.toml
Marine_Nerf_Implementation/: Marine_Nerf_Field.py  Marine_Nerf_Model.py  Marine_Nerf_config.py  Marine_Nerf_datamanager.py  Marine_Nerf_dataparser.py  Marine_Nerf_dataparser_config.py  Marine_Nerf_pipeline.py
Marine_Nerf_Implementation/outputs/Citrus_Farm_2/Marine-Nerf/2024-12-12_074940/: config.yml
Marine_Nerf_Implementation/outputs/Citrus_Farm_2/Marine-Nerf/2024-12-12_075327/: config.yml
Marine_Nerf_Implementation/outputs/Citrus_Farm_2/Marine-Nerf/2024-12-12_075637/: config.yml
Marine_Nerf_Implementation/outputs/Citrus_Farm_2/Marine-Nerf/2024-12-12_080527/: config.yml
Marine_Nerf_Implementation/outputs/Citrus_Farm_2/Marine-Nerf/2024-12-12_080743/: config.yml
Marine_Nerf_Implementation/outputs/Citrus_Farm_2/Marine-Nerf/2024-12-12_081052/: config.yml
Marine_Nerf_Implementation/outputs/Citrus_Farm_2/Marine-Nerf/2024-12-12_081312/: config.yml
Marine_Nerf_Implementation/outputs/Citrus_Farm_2/Marine-Nerf/2024-12-12_082458/: config.yml
Marine_Nerf_Implementation/outputs/Citrus_Farm_2/Marine-Nerf/2024-12-12_082652/: config.yml
Marine_Nerf_Implementation/outputs/Citrus_Farm_2/Marine-Nerf/2024-12-12_083314/: config.yml
Marine_Nerf_Implementation/outputs/Citrus_Farm_2/Marine-Nerf/2024-12-12_083906/: config.yml
Marine_Nerf_Implementation/outputs/Citrus_Farm_2/Marine-Nerf/2024-12-12_084240/: config.yml
Marine_Nerf_Implementation/outputs/Citrus_Farm_2/Marine-Nerf/2024-12-12_085952/: config.yml
(+45 files in other folders)
