
[project]
name = "marine-nerf"
version = "1.0"

dependencies = [
    "nerfstudio"
]

[tool.setuptools.packages.find]
include = ["Marine_Nerf*"]

[project.entry-points.'nerfstudio.method_configs']
marine-nerf = 'Marine_Nerf_Implementation.Marine_Nerf_config:Marine_Nerf'

[project.entry-points.'nerfstudio.dataparser_configs']
marine-nerf-dataparser = 'Marine_Nerf_Implementation.Marine_Nerf_config:Marine_Nerf_Dataparser'

